--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.2.0",
     "env-cmd": "^9.0.0",
+    "firebase": "^6.0.0",
     "gatsby": "^2.4.2",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-source-contentful": "^2.0.55",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-firebaseui": "^3.1.2",
+    "react-helmet": "^5.2.1",
+    "redux": "^4.0.1",
+    "video-react": "^0.13.7"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
