--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.4.2",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-stripe-checkout": "^1.1.2",
     "gatsby-source-contentful": "^2.0.55",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
