--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
     "react-helmet": "^5.2.1",
+    "react-with-firebase-auth": "^1.0.3",
     "redux": "^4.0.1",
     "video-react": "^0.13.7"
   },
