--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
   "author": "Sebastian Gelotte",
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.2.0",
+    "@reach/dialog": "^0.2.9",
+    "@reach/tabs": "^0.1.6",
+    "@reach/visually-hidden": "^0.1.4",
     "env-cmd": "^9.0.0",
     "firebase": "^6.1.0",
     "gatsby": "^2.4.2",
+    "gatsby-plugin-compile-es6-packages": "^1.1.0",
+    "gatsby-plugin-netlify-identity": "0.0.2",
+    "gatsby-plugin-netlify-identity-widget": "^1.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-stripe-checkout": "^1.1.2",
     "gatsby-source-contentful": "^2.0.55",
+    "netlify-identity-widget": "^1.5.5",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-netlify-identity-widget": "^0.1.3",
     "react-with-firebase-auth": "^1.0.3",
     "redux": "^4.0.1",
     "video-react": "^0.13.7"
