--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "env-cmd gatsby build",
     "develop": "env-cmd gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
