--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-helmet": "^5.2.1",
     "react-netlify-identity-widget": "^0.1.3",
     "redux": "^4.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.2",
     "video-react": "^0.13.7"
   },
   "devDependencies": {
