--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Sebastian Gelotte",
   "dependencies": {
+    "@aws-amplify/cli": "^1.12.0",
     "@contentful/rich-text-react-renderer": "^13.2.0",
     "@reach/dialog": "^0.2.9",
     "@reach/tabs": "^0.1.6",
@@ -18,6 +19,7 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-stripe-checkout": "^1.1.2",
     "gatsby-source-contentful": "^2.0.55",
+    "global": "^4.4.0",
     "netlify-identity-widget": "^1.5.5",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -32,6 +34,8 @@
     "video-react": "^0.13.7"
   },
   "devDependencies": {
+    "netlify-lambda": "^1.5.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0"
   },
   "keywords": [
@@ -42,12 +46,20 @@
     "build": "env-cmd gatsby build",
     "develop": "env-cmd gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "start": "npm run develop"
   },
   "repository": {
     "type": "git",
     "url": ""
+  },
+  "proxy": {
+    "/.netlify/functions": {
+      "target": "http://localhost:9000",
+      "pathRewrite": {
+        "^/\\.netlify/functions": ""
+      }
+    }
   }
 }
