--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@reach/dialog": "^0.2.9",
     "@reach/tabs": "^0.1.6",
     "@reach/visually-hidden": "^0.1.4",
+    "aws-amplify": "^1.1.36",
+    "aws-amplify-react": "^2.3.12",
     "env-cmd": "^9.0.0",
     "firebase": "^6.1.0",
     "gatsby": "^2.8.6",
+    "gatsby-plugin-create-client-paths": "^2.1.5",
     "gatsby-plugin-netlify-identity": "0.0.2",
     "gatsby-plugin-netlify-identity-widget": "^1.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
@@ -31,6 +34,7 @@
     "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.2",
+    "styled-components": "^4.3.2",
     "video-react": "^0.13.7"
   },
   "devDependencies": {
