--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "firebase": "^6.1.0",
     "gatsby": "^2.8.6",
     "gatsby-plugin-create-client-paths": "^2.1.5",
+    "gatsby-plugin-google-analytics": "^2.1.14",
+    "gatsby-plugin-mailchimp": "^5.1.2",
+    "gatsby-plugin-manifest": "^2.2.14",
     "gatsby-plugin-netlify-identity": "0.0.2",
     "gatsby-plugin-netlify-identity-widget": "^1.1.1",
+    "gatsby-plugin-offline": "^3.0.3",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-stripe-checkout": "^1.1.2",
