--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "gatsby-source-contentful": "^2.0.55",
     "global": "^4.4.0",
     "react": "^16.8.6",
+    "react-cookie-consent": "^2.5.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-scroll-up-button": "^1.6.4",
     "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.2",
