--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-scroll-up-button": "^1.6.4",
+    "react-socks": "^2.1.0",
     "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.2",
@@ -46,7 +47,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "env-cmd gatsby develop",
+    "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
