--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-scroll-up-button": "^1.6.4",
-    "react-socks": "^2.0.2",
     "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.2",
     "styled-components": "^4.3.2",
+    "use-viewport-sizes": "^0.2.7",
     "video-react": "^0.13.7"
   },
   "devDependencies": {
