Add gatsby plugin for styled-components

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reach/visually-hidden": "^0.1.4",
     "aws-amplify": "^1.1.36",
     "aws-amplify-react": "^2.3.12",
+    "babel-plugin-styled-components": "^1.10.6",
     "env-cmd": "^9.0.0",
     "gatsby": "^2.8.6",
     "gatsby-plugin-create-client-paths": "^2.1.5",
@@ -22,6 +23,7 @@
     "gatsby-plugin-netlify-identity-widget": "^1.1.1",
     "gatsby-plugin-offline": "^2.2.9",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-styled-components": "^3.1.8",
     "gatsby-source-contentful": "^2.0.55",
     "global": "^4.4.0",
     "react": "^16.8.6",
