--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-amplify-react": "^2.3.12",
     "env-cmd": "^9.0.0",
     "gatsby": "^2.8.6",
+    "gatsby-image": "^2.2.23",
     "gatsby-plugin-create-client-paths": "^2.1.5",
     "gatsby-plugin-google-analytics": "^2.1.14",
     "gatsby-plugin-mailchimp": "^5.1.2",
@@ -22,7 +23,10 @@
     "gatsby-plugin-netlify-identity-widget": "^1.1.1",
     "gatsby-plugin-offline": "^2.2.9",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sharp": "^2.2.27",
     "gatsby-source-contentful": "^2.0.55",
+    "gatsby-source-filesystem": "^2.1.28",
+    "gatsby-transformer-sharp": "^2.2.19",
     "global": "^4.4.0",
     "react": "^16.8.6",
     "react-cookie-consent": "^2.5.0",
