Add framer-motion and react-use libs

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reach/visually-hidden": "^0.1.4",
     "babel-plugin-styled-components": "^1.10.6",
     "env-cmd": "^9.0.0",
+    "framer-motion": "^2.6.6",
     "gatsby": "^2.8.6",
     "gatsby-image": "^2.2.23",
     "gatsby-plugin-create-client-paths": "^2.1.5",
@@ -32,6 +33,7 @@
     "react-filter-search": "^1.0.9",
     "react-helmet": "^5.2.1",
     "react-scroll-up-button": "^1.6.4",
+    "react-use": "^15.3.4",
     "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.2",
