A lot of changes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-create-client-paths": "^2.1.5",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-google-analytics": "^2.1.14",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.1.2",
     "gatsby-plugin-manifest": "^2.2.14",
     "gatsby-plugin-offline": "^2.2.9",
@@ -32,7 +33,9 @@
     "react-dom": "^16.8.6",
     "react-filter-search": "^1.0.9",
     "react-helmet": "^5.2.1",
+    "react-hooks-global-state": "^1.0.1",
     "react-scroll-up-button": "^1.6.4",
+    "react-share": "^4.3.0",
     "react-use": "^15.3.4",
     "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
