--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-filter-search": "^1.0.9",
     "react-helmet": "^5.2.1",
     "react-hooks-global-state": "^1.0.1",
+    "react-icons": "^3.11.0",
     "react-scroll-up-button": "^1.6.4",
     "react-share": "^4.3.0",
     "react-use": "^15.3.4",
@@ -54,6 +55,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "env-cmd gatsby develop",
+    "develop-h": "env-cmd gatsby develop -H 0.0.0.0",
     "format": "prettier --write src/**/*.{js,jsx}",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
