--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby": "^2.8.6",
     "gatsby-image": "^2.2.23",
     "gatsby-plugin-create-client-paths": "^2.1.5",
+    "gatsby-plugin-crisp-chat": "^3.2.2",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-google-analytics": "^2.1.14",
     "gatsby-plugin-google-fonts": "^1.0.1",
