--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-source-filesystem": "^2.1.28",
     "gatsby-transformer-sharp": "^2.2.19",
     "global": "^4.4.0",
+    "lottie-web": "^5.7.3",
     "react": "^16.8.6",
     "react-cookie-consent": "^2.5.0",
     "react-dom": "^16.8.6",
