--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-offline": "^2.2.9",
     "gatsby-plugin-portal": "^1.0.7",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-readingtime-contentful": "^1.0.0",
     "gatsby-plugin-sharp": "^2.2.27",
     "gatsby-plugin-styled-components": "^3.1.8",
     "gatsby-source-contentful": "^2.0.55",
