--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "gatsby-source-filesystem": "^2.1.28",
     "gatsby-transformer-sharp": "^2.2.19",
     "global": "^4.4.0",
-    "lottie-web": "^5.7.3",
     "react": "^16.8.6",
     "react-cookie-consent": "^2.5.0",
     "react-dom": "^16.8.6",
@@ -40,6 +39,7 @@
     "react-helmet": "^5.2.1",
     "react-hooks-global-state": "^1.0.1",
     "react-icons": "^3.11.0",
+    "react-lottie-player": "^1.1.0",
     "react-scroll-up-button": "^1.6.4",
     "react-share": "^4.3.0",
     "react-use": "^15.3.4",
