--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,6 @@
   command = "gatsby build"
   # This is the directory is publishing to netlify's CDN
   publish = "public"
+
+[[plugins]]
+package = "@netlify/plugin-functions-install-core"
