--- a/functions/package.json
+++ b/functions/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "airtable": "^0.10.1",
+    "asyncairtable": "^2.1.0",
     "stripe": "^8.127.0"
   }
 }
