--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/stripe-js": "^1.11.0",
     "babel-plugin-styled-components": "^1.10.6",
     "env-cmd": "^9.0.0",
+    "flex-gap-polyfill": "^2.0.1",
     "framer-motion": "^2.6.6",
     "gatsby": "^2.8.6",
     "gatsby-image": "^2.2.23",
@@ -25,6 +26,7 @@
     "gatsby-plugin-manifest": "^2.2.14",
     "gatsby-plugin-offline": "^2.2.9",
     "gatsby-plugin-portal": "^1.0.7",
+    "gatsby-plugin-postcss": "^3.6.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-readingtime-contentful": "^1.0.0",
     "gatsby-plugin-sharp": "^2.2.27",
