--- a/functions/package.json
+++ b/functions/package.json
@@ -4,9 +4,5 @@
   "main": "index.js",
   "author": "Sebastian Gelotte <sebastian.gelotte@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "airtable": "^0.10.1",
-    "asyncairtable": "^2.1.0",
-    "stripe": "^8.127.0"
-  }
+  "dependencies": {}
 }
